--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web Developer Portfolio - Aleksandr Riabov"
+      content="Web Developer Portfolio - Adilet Kasymbaev"
     />
-    <meta name="author" content="Aleksandr Riabov" />
+    <meta name="author" content="Adilet Kasymbaev" />
     <title>Adilet Kasymbaev - Front-end Developer Portfolio</title>
 
     <!-- Favicon -->
